[gd_scene load_steps=42 format=2]

[ext_resource path="res://Scenes/CardNew.gd" type="Script" id=1]
[ext_resource path="res://Assets/Attributes/attribute_xeno.png" type="Texture" id=2]
[ext_resource path="res://Assets/EffectBorders/BordersBig.tres" type="SpriteFrames" id=3]
[ext_resource path="res://Assets/Font/ArialBold.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/EffectSmall.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/CardFrames/empty_card.png" type="Texture" id=6]
[ext_resource path="res://Assets/CardFrames/notch_right.png" type="Texture" id=7]
[ext_resource path="res://Assets/CardFrames/arrow_right.png" type="Texture" id=8]
[ext_resource path="res://Assets/CardFrames/notch_top.png" type="Texture" id=9]
[ext_resource path="res://Assets/CardFrames/arrow_up.png" type="Texture" id=10]
[ext_resource path="res://Assets/CardFrames/notch_left.png" type="Texture" id=11]
[ext_resource path="res://Assets/CardFrames/arrow_left.png" type="Texture" id=12]
[ext_resource path="res://Assets/CardFrames/notch_down.png" type="Texture" id=13]
[ext_resource path="res://Assets/CardFrames/arrow_down.png" type="Texture" id=14]
[ext_resource path="res://Assets/Font/Arial.tres" type="DynamicFont" id=15]
[ext_resource path="res://Assets/Attributes/attribute_fire.png" type="Texture" id=16]
[ext_resource path="res://Assets/Attributes/attribute_necro.png" type="Texture" id=17]
[ext_resource path="res://Assets/Attributes/attribute_dual.png" type="Texture" id=18]
[ext_resource path="res://Assets/Attributes/attribute_volt.png" type="Texture" id=19]
[ext_resource path="res://Assets/Attributes/attribute_ice.png" type="Texture" id=20]
[ext_resource path="res://Assets/Attributes/attribute_glass.png" type="Texture" id=21]
[ext_resource path="res://Assets/Attributes/attribute_wind.png" type="Texture" id=22]
[ext_resource path="res://Assets/Attributes/attribute_earth.png" type="Texture" id=23]
[ext_resource path="res://Assets/Attributes/attribute_holy.png" type="Texture" id=24]
[ext_resource path="res://Assets/Attributes/attribute_none.png" type="Texture" id=25]
[ext_resource path="res://Assets/Attributes/attribute_star.png" type="Texture" id=26]
[ext_resource path="res://Assets/Font/arial.ttf" type="DynamicFontData" id=27]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 178, 241 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Assets/Font/arial.ttf"

[sub_resource type="DynamicFont" id=3]
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=6]
animations = [ {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=8]
animations = [ {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=9]
animations = [ {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="DynamicFontData" id=10]
font_path = "res://Assets/Font/arialbd.ttf"

[sub_resource type="DynamicFont" id=11]
size = 40
use_filter = true
font_data = SubResource( 10 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "fire",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "wind",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "neutral",
"speed": 5.0
}, {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "volt",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "star",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "earth",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "glass",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "dual",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "necro",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "holy",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "ice",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "xeno",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=13]
size = 10
use_filter = true
font_data = ExtResource( 27 )

[sub_resource type="DynamicFont" id=14]
size = 10
use_filter = true
font_data = ExtResource( 27 )

[node name="Node2D" type="KinematicBody2D"]
input_pickable = true
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -166.0
margin_top = -237.0
margin_right = 167.0
margin_bottom = 242.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Illustration" type="TextureRect" parent="."]
margin_left = -164.0
margin_top = -233.0
margin_right = 167.0
margin_bottom = 237.0
mouse_filter = 2
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Effect_Solo" type="Node2D" parent="."]
visible = false
position = Vector2( 0, -6 )

[node name="Condition_Solo" type="AnimatedSprite" parent="Effect_Solo"]
position = Vector2( 0, 120 )
scale = Vector2( 0.5, 0.5 )
frames = ExtResource( 3 )
animation = "blitz"
playing = true

[node name="ActivationText_Solo" type="RichTextLabel" parent="Effect_Solo"]
margin_left = -145.0
margin_top = 32.0
margin_right = 147.0
margin_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 1, 1, 1, 1 )
custom_constants/line_separation = -7
bbcode_enabled = true
meta_underlined = false
scroll_active = false

[node name="EffectText_Solo" type="RichTextLabel" parent="Effect_Solo"]
margin_left = -145.0
margin_top = 136.0
margin_right = 217.0
margin_bottom = 228.0
rect_min_size = Vector2( 362, 84 )
rect_scale = Vector2( 0.8, 0.8 )
rect_clip_content = false
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
size_flags_stretch_ratio = 0.0
custom_fonts/bold_font = ExtResource( 4 )
custom_fonts/normal_font = SubResource( 4 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
tab_size = 0
scroll_active = false

[node name="Effect_1" parent="." instance=ExtResource( 5 )]
position = Vector2( -79, 114 )

[node name="Effect_2" parent="." instance=ExtResource( 5 )]
position = Vector2( 81, 114 )

[node name="CardTemplate" type="AnimatedSprite" parent="."]
position = Vector2( 1, 1 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 5 )
playing = true

[node name="RightNotch" type="Node2D" parent="."]
position = Vector2( 144, 0 )
scale = Vector2( 0.5, 0.5 )

[node name="Broder" type="AnimatedSprite" parent="RightNotch"]
frames = SubResource( 6 )
playing = true

[node name="Diamond" type="Sprite" parent="RightNotch"]
position = Vector2( -464, -360 )
texture = ExtResource( 8 )

[node name="TopNotch" type="Node2D" parent="."]
position = Vector2( 1, -212 )
scale = Vector2( 0.5, 0.5 )

[node name="Border" type="AnimatedSprite" parent="TopNotch"]
frames = SubResource( 7 )
playing = true

[node name="Diamond" type="Sprite" parent="TopNotch"]
position = Vector2( -218, 24 )
texture = ExtResource( 10 )

[node name="LeftNotch" type="Node2D" parent="."]

[node name="Border" type="AnimatedSprite" parent="LeftNotch"]
position = Vector2( -142, 0 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 8 )
playing = true

[node name="Sprite" type="Sprite" parent="LeftNotch"]
position = Vector2( -129, -180 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="DownNotch" type="Node2D" parent="."]
position = Vector2( 0, 214 )
scale = Vector2( 0.5, 0.5 )

[node name="Border" type="AnimatedSprite" parent="DownNotch"]
frames = SubResource( 9 )
playing = true

[node name="Sprite" type="Sprite" parent="DownNotch"]
position = Vector2( -216, -748 )
texture = ExtResource( 14 )

[node name="DamageScale" type="Node2D" parent="."]
position = Vector2( 93, -161 )
scale = Vector2( 0.75, 0.75 )

[node name="DamageValue" type="Label" parent="DamageScale"]
margin_left = -278.667
margin_top = -48.0
margin_right = -201.667
margin_bottom = -2.00002
custom_fonts/font = SubResource( 11 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "8"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CardName" type="Label" parent="."]
margin_left = -62.0
margin_top = -196.0
margin_right = 107.0
margin_bottom = -165.0
rect_scale = Vector2( 0.99422, 1 )
size_flags_horizontal = 0
size_flags_vertical = 0
size_flags_stretch_ratio = 0.0
custom_fonts/font = ExtResource( 15 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Attribute" type="AnimatedSprite" parent="."]
position = Vector2( 130, -180 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 12 )
animation = "xeno"
playing = true

[node name="Version rect" type="ColorRect" parent="."]
margin_left = 23.0
margin_top = 231.0
margin_right = 167.0
margin_bottom = 242.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Node2D" type="Node2D" parent="Version rect"]
rotation = 0.785398

[node name="TextureRect" type="ColorRect" parent="Version rect/Node2D"]
margin_right = 12.0
margin_bottom = 11.0
color = Color( 0, 0, 0, 1 )

[node name="Number" type="Label" parent="Version rect"]
margin_left = 8.0
margin_right = 40.0
margin_bottom = 14.0
custom_fonts/font = SubResource( 13 )
text = "nÂ°:001"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Version" type="Label" parent="Version rect"]
anchor_right = 1.0
custom_fonts/font = SubResource( 14 )
text = "v0.0.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}
